Capturando valor do formulário ao clicar no botão

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <p>Advinhe um número entre 0 e 10</p>
 
       <form>
-        <input type="number" />
-        <button>Tentar</button>
+        <input id="inputNumber" type="number" />
+        <button onclick="handleClick(event)">Tentar</button>
       </form>
     </div>
 
